Update tu PC lên

--- a/admin/chef.html
+++ b/admin/chef.html
@@ -419,7 +419,7 @@
   </aside>
 
   <!-- MAIN -->
-  <main style="margin-left: 250px; min-height: 100vh; padding: 1.5rem">
+  <main style="margin-left: 235px; min-height: 100vh;">
     <h1 style="margin-bottom: 1rem">Quản lý đầu bếp</h1>
     <div>
       <table>
