Update tu PC lên

--- a/admin/chef.html
+++ b/admin/chef.html
@@ -320,7 +320,7 @@
             color: white;
             text-decoration: none;
           ">
-        <span>CAKEZONE ADMIN</span>
+        <span>Cakezone Admin</span>
       </a>
     </div>
     <hr style="border-top: 1px solid rgba(255, 255, 255, 0.1); margin: 1rem 0" />
