--- a/admin/chitietphieunhap.html
+++ b/admin/chitietphieunhap.html
@@ -228,7 +228,7 @@
 <aside style="position: fixed; top: 0; left: 0; z-index: 1000; width: 250px; height: 100vh; background: linear-gradient(195deg, #42424a, #191919); color: white; transition: all 0.3s ease; box-shadow: 0 0 2rem 0 rgba(0, 0, 0, 0.15);" id="sidenav-main">
   <div style="padding: 1.5em 1rem;">
     <a href="#" target="_blank" style="display: flex; align-items: center; font-weight: 600; color: white; text-decoration: none;">
-      <span style="margin-left: 0.25rem; font-weight: 700;">TRUNG TÂM ĐIỀU KHIỂN</span>
+      <span style="margin-left: 0.25rem; font-weight: 700;">Cakezone Admin</span>
     </a>
   </div>
   <hr style="width: 100%; border: none; border-top: 1px solid rgba(255, 255, 255, 0.1); margin: 1rem 0;">
