--- a/admin/index.html
+++ b/admin/index.html
@@ -83,7 +83,7 @@
             text-decoration: none;
           "
         >
-          <span>TRUNG TÂM ĐIỀU KHIỂN</span>
+          <span>Cakezone Admin</span>
         </a>
       </div>
       <hr
@@ -316,7 +316,7 @@
                 <a
                   href="user.html"
                   style="color: white; text-decoration: underline"
-                  >View Customer</a
+                  >Xem danh sách</a
                 >
                 <span style="font-size: 1.25rem">›</span>
               </div>
@@ -345,7 +345,7 @@
                 <a
                   href="chef.html"
                   style="color: white; text-decoration: underline"
-                  >View Staff</a
+                  >Xem danh sách</a
                 >
                 <span style="font-size: 1.25rem">›</span>
               </div>
