--- a/pages/snack-cake-detail-1-logged.html
+++ b/pages/snack-cake-detail-1-logged.html
@@ -137,7 +137,7 @@
         <div class="d-inline-flex align-items-center justify-content-center">
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
-            <h6 class="text-uppercase mb-1">Email Us</h6>
+            <h6 class="text-uppercase mb-1">Email</h6>
             <span>info@example.com</span>
           </div>
         </div>
@@ -240,7 +240,7 @@
         <h2 class="mb-3">Bánh Quy Vừa Ngọt</h2>
 
         <div class="mb-3">
-          <span class="h4 me-2">$45.99</span>
+          <span class="h4 me-2">320.000₫</span>
         </div>
 
         <p class="mb-4">
