--- a/pages/wedding-cake-1.html
+++ b/pages/wedding-cake-1.html
@@ -61,7 +61,7 @@
         <div class="d-inline-flex align-items-center justify-content-center">
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
-            <h6 class="text-uppercase mb-1">Email Us</h6>
+            <h6 class="text-uppercase mb-1">Email</h6>
             <span>info@example.com</span>
           </div>
         </div>
@@ -238,7 +238,7 @@
                   <a href="wedding-cake-detail-1.html">Bánh Cưới Vừa Ngọt</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi.
+                  Bánh cưới làm từ socola nguyên chất, phủ kem tươi mịn màng, điểm xuyết dâu tây tươi tạo vẻ lãng mạn.
                 </p>
                 <h5 class="fw-semibold text-primary">320.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -257,10 +257,10 @@
               <img src="../img/wdcake-2.jpg" class="card-img-top" alt="Wedding Cake 2" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Vani Trái Cây</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh vani mềm xốp, kem bơ thơm ngậy, trang trí bằng trái cây tươi theo mùa.
+                  Hương vị vani nhẹ nhàng hòa cùng trái cây tươi, tạo nên chiếc bánh cưới tươi sáng và đầy sức sống.
                 </p>
                 <h5 class="fw-semibold text-primary">280.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -279,10 +279,10 @@
               <img src="../img/wdcake-3.jpg" class="card-img-top" alt="Wedding Cake 3" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Red Velvet</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi bật và sang trọng.
+                  Bánh Red Velvet đỏ quyến rũ kết hợp với lớp kem phô mai béo ngậy — lựa chọn sang trọng cho lễ cưới.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -301,10 +301,10 @@
               <img src="../img/wdcake-4.jpg" class="card-img-top" alt="Wedding Cake 4" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Trà Xanh Thanh Khiết</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng bột trà xanh.
+                  Bánh cưới vị trà xanh thanh mát, phủ kem tươi nhẹ, mang lại cảm giác tinh tế và tự nhiên.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -323,10 +323,10 @@
               <img src="../img/wdcake-5.jpg" class="card-img-top" alt="Wedding Cake 5" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Socola Ngọt</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Socola Tình Yêu</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí bằng dâu tây tươi.
+                  Lớp bánh socola đậm đà cùng kem tươi mịn màng — biểu tượng ngọt ngào của tình yêu đôi lứa.
                 </p>
                 <h5 class="fw-semibold text-primary">320.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -345,10 +345,10 @@
               <img src="../img/wdcake-6.jpg" class="card-img-top" alt="Wedding Cake 6" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Vani Trắng Tinh Khôi</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh vani mềm xốp, kem bơ thơm ngậy, trang trí bằng trái cây tươi theo mùa.
+                  Tầng bánh vani trắng tinh khôi, phủ kem bơ mịn màng, thích hợp cho không gian cưới cổ điển.
                 </p>
                 <h5 class="fw-semibold text-primary">280.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -367,10 +367,10 @@
               <img src="../img/wdcake-7.jpg" class="card-img-top" alt="Wedding Cake 7" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Red Velvet Sang Trọng</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi bật và sang trọng.
+                  Bánh cưới Red Velvet ba tầng phủ kem trắng, mang vẻ đẹp quý phái cho ngày trọng đại.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -389,10 +389,11 @@
               <img src="../img/wdcake-8.jpg" class="card-img-top" alt="Wedding Cake 8" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="wedding-cake-detail-1.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="wedding-cake-detail-1.html">Bánh Cưới Trà Xanh Tinh Tế</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
-                  Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng bột trà xanh.
+                  Bánh cưới vị trà xanh nhẹ nhàng, trang trí bằng lá trà và hoa trắng tinh tế, tượng trưng cho sự thanh
+                  khiết.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
                 <button class="btn btn-primary mt-2" onclick="window.location.href='wedding-cake-detail-1.html'">
@@ -404,6 +405,7 @@
               </div>
             </div>
           </div>
+
 
         </div>
       </div>
