--- a/pages/wedding-cake-2-logged.html
+++ b/pages/wedding-cake-2-logged.html
@@ -61,7 +61,7 @@
         <div class="d-inline-flex align-items-center justify-content-center">
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
-            <h6 class="text-uppercase mb-1">Email Us</h6>
+            <h6 class="text-uppercase mb-1">Email</h6>
             <span>info@example.com</span>
           </div>
         </div>
@@ -385,10 +385,10 @@
             </div>
           </div>
 
-          <!-- Cake 7 -->
+          <!-- Cake 15 -->
           <div class="col-12 col-sm-6 col-md-3">
             <div class="card h-100 text-center">
-              <img src="../img/wdcake-7.jpg" class="card-img-top" alt="Wedding Cake 7" />
+              <img src="../img/wdcake-15.jpeg" class="card-img-top" alt="Wedding Cake 15" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
                   <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Red Velvet</a>
@@ -407,10 +407,10 @@
             </div>
           </div>
 
-          <!-- Cake 8 -->
+          <!-- Cake 16 -->
           <div class="col-12 col-sm-6 col-md-3">
             <div class="card h-100 text-center">
-              <img src="../img/wdcake-8.jpg" class="card-img-top" alt="Wedding Cake 8" />
+              <img src="../img/wdcake-16.jpeg" class="card-img-top" alt="Wedding Cake 16" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
                   <a href="wedding-cake-detail-1-logged.html">Bánh Sinh Nhật Trà Xanh</a>
