--- a/admin/edit-category.html
+++ b/admin/edit-category.html
@@ -133,7 +133,7 @@
   <aside style="position: fixed; top: 0; left: 0; z-index: 1000; width: 250px; height: 100vh; background: linear-gradient(195deg, #42424a, #191919); color: white; box-shadow: 0 0 2rem rgba(0, 0, 0, 0.15);">
     <div style="padding: 1.5em 1rem;">
       <a href="#" style="display: flex; align-items: center; font-weight: 700; color: white; text-decoration: none;">
-        <span>TRUNG TÂM ĐIỀU KHIỂN</span>
+        <span>Cakezone Admin</span>
       </a>
     </div>
     <hr style="border-top: 1px solid rgba(255,255,255,0.1); margin: 1rem 0;">
