--- a/admin/nguyenlieu.html
+++ b/admin/nguyenlieu.html
@@ -495,7 +495,7 @@
             color: white;
             text-decoration: none;
           ">
-        <span>TRUNG TÂM ĐIỀU KHIỂN</span>
+        <span>Cakezone Admin</span>
       </a>
     </div>
     <hr style="border-top: 1px solid rgba(255, 255, 255, 0.1); margin: 1rem 0" />
