--- a/pages/about.html
+++ b/pages/about.html
@@ -40,14 +40,14 @@
                 <div class="d-inline-flex align-items-center justify-content-center">
                     <i class="bi bi-envelope fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase mb-1">Email Us</h6>
+                        <h6 class="text-uppercase mb-1">Email</h6>
                         <span>info@example.com</span>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 text-center bg-primary border-inner py-3">
                 <div class="d-inline-flex align-items-center justify-content-center">
-                    <a href="../index.html" class="navbar-brand">
+                    <a href="loggedin.html" class="navbar-brand">
                         <h1 class="m-0 text-uppercase text-white"><i
                                 class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                     </a>
@@ -68,43 +68,45 @@
 
 
     <!-- Navbar Start -->
-    <nav class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0">
-        <div class="container-fluid">
-            <!-- Nút toggle cho mobile -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <nav
+      class="navbar navbar-expand-lg bg-dark navbar-dark shadow-sm py-3 py-lg-0 px-3 px-lg-0"
+    >
+      <div class="container-fluid">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <!-- Các menu đang có -->
-                <div class="navbar-nav ms-auto mx-lg-auto py-0">
-                    <a href="../index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link active">About Us</a>
-                    <a href="birthday-cake-1.html" class="nav-item nav-link">Menu & Pricing</a>
-                    <a href="team.html" class="nav-item nav-link">Master Chefs</a>
-
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
-                </div>
-
-                <!-- Login/Signup bên phải -->
-                <div class="navbar-nav ms-auto">
-                    <a href="login.html" class="nav-item nav-link">Login</a>
-                    <a href="signup.html" class="nav-item nav-link">Signup</a>
-                </div>
-            </div>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="navbar-nav ms-auto mx-lg-auto py-0">
+            <a href="../index.html" class="nav-item nav-link">Trang chủ</a>
+            <a href="about.html" class="nav-item nav-link">Giới thiệu</a>
+            <a href="birthday-cake-1.html" class="nav-item nav-link active"
+              >Sản phẩm</a
+            >
+            <a href="team.html" class="nav-item nav-link">Đầu bếp</a>
+            <a href="contact.html" class="nav-item nav-link">Liên hệ</a>
+          </div>
+          <div class="navbar-nav ms-auto">
+            <a href="login.html" class="nav-item nav-link">Đăng nhập</a>
+            <a href="signup.html" class="nav-item nav-link">Đăng ký</a>
+          </div>
         </div>
+      </div>
     </nav>
     <!-- Navbar End -->
-
 
     <!-- Page Header Start -->
     <div class="container-fluid bg-dark bg-img p-5 mb-5">
         <div class="row">
             <div class="col-12 text-center">
-                <h1 class="display-4 text-uppercase text-white">About Us</h1>
-                <a href="../index.html">Home</a>
-                <i class="far fa-square text-primary px-2"></i>
-                <a href="">About</a>
+                <h1 class="display-4 text-uppercase text-white">Giới thiệu</h1>
+                <a href="loggedin.html">Trang chủ</a>
+
             </div>
         </div>
     </div>
@@ -115,8 +117,8 @@
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
-                <h2 class="text-primary font-secondary">About Us</h2>
-                <h1 class="display-4 text-uppercase">Welcome To CakeZone</h1>
+                <h2 class="text-primary font-secondary">Về chúng tôi</h2>
+                <h1 class="display-4 text-uppercase">Chào mừng đến với CakeZone</h1>
             </div>
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 400px;">
@@ -125,31 +127,36 @@
                     </div>
                 </div>
                 <div class="col-lg-6 pb-5">
-                    <h4 class="mb-4">Tempor erat elitr rebum clita. Diam dolor diam ipsum erat lorem sed stet labore
-                        lorem sit clita duo</h4>
-                    <p class="mb-5">Tempor erat elitr at rebum at at clita. Diam dolor diam ipsum et tempor sit. Clita
-                        erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor
-                        eirmod magna dolore erat amet magna</p>
+                    <h4 class="mb-4">CakeZone – Nơi ngọt ngào gặp gỡ sự lành mạnh</h4>
+                    <p class="mb-5">
+                        Tại CakeZone, chúng tôi tin rằng niềm vui từ những chiếc bánh không cần phải đánh đổi bằng sức
+                        khỏe.
+                        Mỗi chiếc bánh được làm từ nguyên liệu tự nhiên, ít đường, không chất bảo quản, và được cân
+                        chỉnh tỉ mỉ để vừa ngon miệng vừa tốt cho cơ thể.
+                        Từ bánh kem sinh nhật, bánh mousse, đến bánh ngọt ăn kiêng, tất cả đều mang hương vị tinh tế và
+                        trọn vẹn tình yêu của người thợ làm bánh.
+                    </p>
                     <div class="row g-5">
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4"
                                 style="width: 90px; height: 90px;">
-                                <i class="fa fa-heartbeat fa-2x text-white"></i>
+                                <i class="fa fa-leaf fa-2x text-white"></i>
                             </div>
-                            <h4 class="text-uppercase">100% Healthy</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna
-                                dolor vero</p>
+                            <h4 class="text-uppercase">Nguyên liệu tự nhiên</h4>
+                            <p class="mb-0">Sử dụng bột hạnh nhân, yến mạch, đường ăn kiêng và trái cây tươi – mang đến
+                                vị ngọt thanh thuần khiết.</p>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4"
                                 style="width: 90px; height: 90px;">
-                                <i class="fa fa-award fa-2x text-white"></i>
+                                <i class="fa fa-birthday-cake fa-2x text-white"></i>
                             </div>
-                            <h4 class="text-uppercase">Award Winning</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna
-                                dolor vero</p>
+                            <h4 class="text-uppercase">Bánh tươi mỗi ngày</h4>
+                            <p class="mb-0">Tất cả sản phẩm đều được làm mới trong ngày để đảm bảo hương vị và chất
+                                lượng tốt nhất.</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
@@ -222,7 +229,7 @@
                 <div class="col-lg-4 col-md-6 mt-lg-n5">
                     <div
                         class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
-                        <a href="../index.html" class="navbar-brand">
+                        <a href="loggedin.html" class="navbar-brand">
                             <h1 class="m-0 text-uppercase text-white"><i
                                     class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
                         </a>
@@ -260,16 +267,14 @@
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <h4 class="text-primary text-uppercase mb-4">Truy cập nhanh</h4>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-secondary mb-2" href="../index.html"><i
+                                <a class="text-secondary mb-2" href="loggedin.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Home</a>
-                                <a class="text-secondary mb-2" href="about.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>About
-                                    Us</a>
-                                <a class="text-secondary mb-2" href="team.html"><i
+                                <a class="text-secondary mb-2" href="about-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>About Us</a>
+                                <a class="text-secondary mb-2" href="team-logged.html"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Master Chefs</a>
-                                <a class="text-secondary mb-2" href="contact.html"><i
-                                        class="bi bi-arrow-right text-primary me-2"></i>Contact
-                                    Us</a>
+                                <a class="text-secondary" href="contact-logged.html"><i
+                                        class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
