--- a/pages/birthday-cake-1-logged.html
+++ b/pages/birthday-cake-1-logged.html
@@ -61,7 +61,7 @@
         <div class="d-inline-flex align-items-center justify-content-center">
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
-            <h6 class="text-uppercase mb-1">Email Us</h6>
+            <h6 class="text-uppercase mb-1">Email</h6>
             <span>info@example.com</span>
           </div>
         </div>
@@ -307,14 +307,14 @@
               <img src="../img/bdcake-3.jpg" class="card-img-top" alt="Birthday Cake 3" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="birthday-cake-detail-1-logged.html">Bánh Sinh Nhật Red Velvet</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi
                   bật và sang trọng.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -330,14 +330,14 @@
               <img src="../img/bdcake-4.jpg" class="card-img-top" alt="Birthday Cake 4" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="birthday-cake-detail-1-logged.html">Bánh Sinh Nhật Trà Xanh</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng
                   bột trà xanh.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -353,14 +353,14 @@
               <img src="../img/bdcake-5.jpg" class="card-img-top" alt="Birthday Cake 1" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Socola Ngọt</a>
+                  <a href="birthday-cake-detail-1-logged.html">Bánh Sinh Nhật Socola Ngọt</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh làm từ socola nguyên chất, kem tươi mịn màng, trang trí
                   bằng dâu tây tươi.
                 </p>
                 <h5 class="fw-semibold text-primary">320.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -376,14 +376,14 @@
               <img src="../img/bdcake-6.jpg" class="card-img-top" alt="Birthday Cake 2" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Vani Trái Cây</a>
+                  <a href="birthday-cake-detail-1-logged.html">Bánh Sinh Nhật Vani Trái Cây</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh vani mềm xốp, kem bơ thơm ngậy, trang trí bằng trái cây
                   tươi theo mùa.
                 </p>
                 <h5 class="fw-semibold text-primary">280.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -399,14 +399,14 @@
               <img src="../img/bdcake-7.jpg" class="card-img-top" alt="Birthday Cake 3" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Red Velvet</a>
+                  <a href="birthday-cake-detail-1-logged.html">Bánh Sinh Nhật Red Velvet</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh Red Velvet đỏ rực, kem phô mai béo ngậy — lựa chọn nổi
                   bật và sang trọng.
                 </p>
                 <h5 class="fw-semibold text-primary">420.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
@@ -422,14 +422,14 @@
               <img src="../img/bdcake-8.jpg" class="card-img-top" alt="Birthday Cake 4" />
               <div class="card-body d-flex flex-column">
                 <h6 class="fw-bold">
-                  <a href="birthday-cake-detail-1.html">Bánh Sinh Nhật Trà Xanh</a>
+                  <a href="birthday-cake-detail-1-logged.html">Bánh Sinh Nhật Trà Xanh</a>
                 </h6>
                 <p class="mb-3 flex-grow-1">
                   Bánh trà xanh nhẹ nhàng, kem tươi mát lạnh, trang trí bằng
                   bột trà xanh.
                 </p>
                 <h5 class="fw-semibold text-primary">350.000 ₫</h5>
-                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1.html'">
+                <button class="btn btn-primary mt-2" onclick="window.location.href='birthday-cake-detail-1-logged.html'">
                   Đọc thêm
                 </button>
                 <button class="btn btn-primary mt-2 add-to-cart-btn">
