--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,7 +56,7 @@
                 <div class="d-inline-flex align-items-center justify-content-center">
                     <i class="bi bi-envelope fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase mb-1">Email Us</h6>
+                        <h6 class="text-uppercase mb-1">Email</h6>
                         <span>info@example.com</span>
                     </div>
                 </div>
@@ -73,7 +73,7 @@
                 <div class="d-inline-flex align-items-center justify-content-center">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase mb-1">Gọi cho chúng tôi</h6>
+                        <h6 class="text-uppercase mb-1">Di động</h6>
                         <span>+012 345 6789</span>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
                         <i class="bi bi-phone-vibrate fs-1 text-white"></i>
-                        <h6 class="text-uppercase my-2">Gọi cho chúng tôi</h6>
+                        <h6 class="text-uppercase my-2">Di động</h6>
                         <span>+012 345 6789</span>
                     </div>
                 </div>
