--- a/pages/login.html
+++ b/pages/login.html
@@ -39,14 +39,14 @@
     <form>
       <!-- Email input -->
       <div class="mb-4">
-        Username
+        Tên đăng nhập
         <label class="form-label" for="form2Example1"></label>
         <input type="text" id="form2Example1" class="form-control" />
       </div>
 
       <!-- Password input -->
       <div class="mb-4">
-        <label class="form-label" for="form2Example2">Password</label>
+        <label class="form-label" for="form2Example2">Mật khẩu</label>
         <input type="password" id="form2Example2" class="form-control" />
       </div>
 
@@ -61,28 +61,28 @@
               checked
             />
             <label class="form-check-label" for="form2Example31">
-              Remember me
+              Ghi nhớ tôi
             </label>
           </div>
         </div>
         <div class="col text-end">
-          <a href="#!">Forgot password?</a>
+          <a href="#!">Quên mật khẩu?</a>
         </div>
       </div>
 
       <!-- Submit button -->
       <button type="button" class="btn btn-primary btn-block mb-4">
-        Log in
+        Đăng nhập
       </button>
 
       <!-- Register -->
       <div class="text-center">
-        <p>Not a member? <a href="signup.html">Register</a></p>
+        <p>Chưa có tài khoản? <a href="signup.html">Đăng ký</a></p>
       </div>
 
       <!-- Home -->
       <div class="text-center">
-        <a href="../index.html">Home</a>
+        <a href="../index.html">Trang chủ</a>
       </div>
     </form>
 
