--- a/pages/profile.html
+++ b/pages/profile.html
@@ -101,7 +101,7 @@
         <div class="d-inline-flex align-items-center justify-content-center">
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
-            <h6 class="text-uppercase mb-1">Email Us</h6>
+            <h6 class="text-uppercase mb-1">Email</h6>
             <span>info@example.com</span>
           </div>
         </div>
