--- a/pages/signup.html
+++ b/pages/signup.html
@@ -26,46 +26,46 @@
 <body>
   <form id="signupForm">
     <div class="mb-4">
-      <label class="form-label" for="formName">Your Name</label>
+      <label class="form-label" for="formName">Họ tên</label>
       <input type="text" id="formName" class="form-control" required />
     </div>
 
     <div class="mb-4">
-      <label class="form-label" for="formUsername">Username</label>
+      <label class="form-label" for="formUsername">Tên đăng nhập</label>
       <input type="text" id="formUsername" class="form-control" required />
     </div>
 
     <div class="mb-4">
-      <label class="form-label" for="formEmail">Your Email</label>
+      <label class="form-label" for="formEmail">Email</label>
       <input type="email" id="formEmail" class="form-control" required />
     </div>
 
     <div class="mb-4">
-      <label class="form-label" for="formPassword">Your Password</label>
+      <label class="form-label" for="formPassword">Mật khẩu</label>
       <input type="password" id="formPassword" class="form-control" required />
     </div>
 
     <div class="mb-4">
-      <label class="form-label" for="formRepeatPassword">Repeat Password</label>
+      <label class="form-label" for="formRepeatPassword">Nhập lại mật khẩu</label>
       <input type="password" id="formRepeatPassword" class="form-control" required />
     </div>
 
     <div class="mb-4">
-      <label class="form-label" for="formPhoneNumber">Phone Number</label>
+      <label class="form-label" for="formPhoneNumber">Số điện thoại</label>
       <input type="tel" id="formPhoneNumber" class="form-control" />
     </div>
 
     <button type="submit" class="btn btn-primary d-block w-100 mb-4">
-  Sign Up
+      Đăng ký
 </button>
 
 
     <div class="text-center">
-      <p>Already a member? <a href="login.html">Log in</a></p>
+      <p>Đã có tài khoản? <a href="login.html">Đăng nhập</a></p>
     </div>
 
     <div class="text-center">
-      <a href="../index.html">Home</a>
+      <a href="../index.html">Trang chủ</a>
     </div>
   </form>
 
