--- a/pages/snack-cake-3-logged.html
+++ b/pages/snack-cake-3-logged.html
@@ -61,14 +61,14 @@
         <div class="d-inline-flex align-items-center justify-content-center">
           <i class="bi bi-envelope fs-1 text-primary me-3"></i>
           <div class="text-start">
-            <h6 class="text-uppercase mb-1">Email Us</h6>
+            <h6 class="text-uppercase mb-1">Email</h6>
             <span>info@example.com</span>
           </div>
         </div>
       </div>
       <div class="col-lg-4 text-center bg-primary border-inner py-3">
         <div class="d-inline-flex align-items-center justify-content-center">
-          <a href="../index.html" class="navbar-brand">
+          <a href="loggedin.html" class="navbar-brand">
             <h1 class="m-0 text-uppercase text-white">
               <i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone
             </h1>
@@ -144,7 +144,7 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-light p-6 rounded mb-0">
             <li class="breadcrumb-item mb-0">
-              <a href="../index.html" class="text-decoration-none text-primary fw-semibold">
+              <a href="loggedin.html" class="text-decoration-none text-primary fw-semibold">
                 <i class="bi bi-house-door-fill me-1"></i> Trang chủ
               </a>
             </li>
